--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<img class="rounded-circle mx-auto" src="thiego.png" style="margin-top: 100px">
 
 	    <h1>Olá amigos!</h1>
-		<p>Bem vindo ao meu site pessoal.</p>
+		<p>Bem vindos ao meu site pessoal.</p>
 	</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
