alteração no conteúdo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<div class="text-center" style="color: #fff">
 		<img class="rounded-circle mx-auto" src="thiego.png" style="margin-top: 100px">
 
-	    <h1>Olá amigos!</h1>
-		<p>Bem vindos ao meu site pessoal.</p>
+	    <h1>Hello guys!</h1>
+		<p>Welcome to my personal site.</p>
 	</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
