--- a/index.html
+++ b/index.html
@@ -7,21 +7,36 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="estilo.css" rel="stylesheet">
 
-	<title>Th. Moura</title>
+	<title>Th. Moura - Personal Blog</title>
   </head>
-  <body style="background: #000">
-
-	<div class="text-center" style="color: #fff">
-		<img class="rounded-circle mx-auto" src="thiego.png" style="margin-top: 100px">
-
-	    <h1>Hello guys!</h1>
-		<p>Welcome to my personal site.</p>
+  <body>
+  <div class="row">
+	<div class="pl text-center col-lg-3">
+		  <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com">
+      <h4><strong>Thiego</strong> R. <strong>Moura</strong></h4>
+      <p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
+      • Computer Science Student 💻<br>
+      • Since 1997 🚼<br>
+      • From Barra do Bugres 🇧🇷</p>
 	</div>
-    <!-- Optional JavaScript -->
+
+  <div class="fright text-center col-lg-9">
+    <h2>Hello guys!</h2>
+    <p>Welcome to my personal blog.</p>
+  </div>
+  </div>
+  </body>
+
+  <footer>
+    <div class="footer text-center">
+      <span>&copy;Copyright 2019 - Thiego R. Moura. Todos os direitos reservados.</span>
+    </div>
+  </footer>
+  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
 </html>
