alteração de conteúdo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<title>Th. Moura - Personal Blog</title>
   </head>
   <body>
+  <div class="container">
   <div class="row">
 	<div class="pl text-center col-lg-3">
 		  <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com">
@@ -24,7 +25,8 @@
 
   <div class="fright text-center col-lg-9">
     <h2>Hello guys!</h2>
-    <p>Welcome to my personal blog.</p>
+    <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
+  </div>
   </div>
   </div>
   </body>
