--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 	<div class="pl text-center col-lg-3">
 		  <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com">
       <h4><strong>Thiego</strong> R. <strong>Moura</strong></h4>
-      <p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
+      <!--<p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
       • Computer Science Student 💻<br>
       • Since 1997 🚼<br>
-      • From Barra do Bugres 🇧🇷</p>
+      • From Barra do Bugres 🇧🇷</p>-->
+      <p>A trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres</p>
 	</div>
 
   <div class="fright text-center col-lg-9">
