--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <meta property="og:url"           content="https://http://thiegomoura.github.io/me" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Th. Moura" />
+    <meta property="og:description"   content="Personal blog" />
+    <meta property="og:image"         content="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com" />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="estilo.css" rel="stylesheet">
@@ -16,7 +22,7 @@
   <div class="row">
 	<div class="pl text-center col-lg-3">
 		  <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com">
-      <h4><strong>Thiego</strong> R. <strong>Moura</strong></h4>
+      <h4><strong>Thiego</strong> R. Moura</h4>
       <!--<p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
       • Computer Science Student 💻<br>
       • Since 1997 🚼<br>
@@ -28,6 +34,9 @@
     <h2>Hello guys!</h2>
     <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
   </div>
+  </div>
+  <div class="col-lg-12 text-center fb">
+  <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fthiegomoura.github.io%2Fme%2F&width=72&layout=box_count&action=like&size=large&show_faces=true&share=false&height=65&appId=1259348474214831" width="72" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" colorscheme="dark" allowTransparency="true" allow="encrypted-media"></iframe>
   </div>
   </div>
   </body>
