adicionando icones sociais

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta property="og:description"   content="Personal blog" />
     <meta property="og:image"         content="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com" />
 
+    <!--Fonts-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="estilo.css" rel="stylesheet">
@@ -28,6 +31,9 @@
       • Since 1997 🚼<br>
       • From Barra do Bugres 🇧🇷</p>-->
       <p>A trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres</p>
+      <a><i class="fab fa-facebook-f"></i></a>
+      <a><i class="fab fa-instagram"></i></a>
+      <a><i class="fab fa-twitter"></i></a>
 	</div>
 
   <div class="fright text-center col-lg-9">
