--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       • Computer Science Student 💻<br>
       • Since 1997 🚼<br>
       • From Barra do Bugres 🇧🇷</p>-->
-      <p>A trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres</p>
+      <p>A trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres.</p>
       <br>
       <br>
 	</div>
