--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       <a href="http://www.instagram.com/thiego_moura/" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="http://twitter.com/thrmoura" target="_blank"><i class="fab fa-twitter"></i></a>
       <br>
+	Contact me:
+	<a href="mailto:thi-ego@hotmail.com">thi-ego@hotmail.com</a>
       <br>
 	</div>
 
