--- a/index.html
+++ b/index.html
@@ -4,20 +4,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <meta property="og:url"           content="https://http://thiegomoura.github.io/me" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Th. Moura" />
     <meta property="og:description"   content="Personal blog" />
     <meta property="og:image"         content="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com" />
-
     <!--Fonts-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="estilo.css" rel="stylesheet">
-
 	<title>Th. Moura - Personal Blog</title>
   </head>
   <body>
@@ -26,21 +22,37 @@
 	<div class="pl text-center col-lg-3">
 		  <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com">
       <h4><strong>Thiego</strong> R. Moura</h4>
+      <p class="italic">A Brazilian assistant technology.</p>
       <!--<p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
       • Computer Science Student 💻<br>
       • Since 1997 🚼<br>
       • From Barra do Bugres 🇧🇷</p>-->
-      <p>A trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres.</p>
-	Follow me:
-	<a href="http://facebook.com.br/thiegomoura" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      <a href="http://www.instagram.com/thiego_moura/" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="http://twitter.com/thrmoura" target="_blank"><i class="fab fa-twitter"></i></a>
-      <br>
-	Contact me:
-	<a href="mailto:thi-ego@hotmail.com">thi-ego@hotmail.com</a>
+      <p>I'm a trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres.</p>
+	<p class="italic">follow me</p>
+	<ul class="list-unstyled">
+  <li>
+    <a href="http://facebook.com.br/thiegomoura" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+  </li>
+  <li>
+    <a href="http://www.instagram.com/thiego_moura/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+  </li>
+  <li>
+    <a href="http://twitter.com/thrmoura" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+  </li>
+  </ul>
+  <p class="italic">invete me</i><br>
+  <ul class="list-unstyled">
+    <li>League
+      <a href="https://lolprofile.net/pt/summoner/br/Nem%20sabe%20como#update" target="_blank"><i class="fas fa-gamepad"></i> Nem sabe como</a>
+    </li>
+    <li>Free fire
+      <i class="fas fa-user-ninja"></i> A3Fark</a>
+    </li>
+  </ul>
+  <p class="italic">contact me at</p>
+	<a href="mailto:thi-ego@hotmail.com">thi-ego<i class="fas fa-at"></i>hotmail.com</a>
       <br>
 	</div>
-
   <div class="fright text-center col-lg-9">
     <h2>Hello guys!</h2>
     <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
@@ -51,7 +63,6 @@
   </div>
   </div>
   </body>
-
   <footer>
     <div class="footer text-center">
       <span>&copy;Copyright 2019 - Thiego R. Moura. Todos os direitos reservados.</span>
