modificação do layout

--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,8 @@
       <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
     </div>
     <div class="fright col-lg-10">
+      <h3>Projects</h3>
+      <a href="./post/distributed-systems.html"><h5>#1. Overview of Distributed Systems</h5></a>
       <p>Its purpose is to provide an overview of the activities developed during the course of the course.</p>
     </div>
     </div>
