--- a/timeline.html
+++ b/timeline.html
@@ -27,7 +27,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="./index.html">Home <!--<span class="sr-only">(current)--></span></a>
+        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./timeline.html">Timeline</a>
@@ -81,7 +81,9 @@
       <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
     </div>
     <div class="fright col-lg-10">
-      <p>Its purpose is to provide an overview of the activities developed during the course of the course.</p>
+      <h3>Timeline</h3>
+      <h5>Building (...)</h5>
+      <p>This is a paragrapy</p>
     </div>
     </div>
   </div>
