modificação do layout

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
     </div>
     <div class="fright col-lg-10">
-      <p>Its purpose is to provide an overview of the activities developed during the course of the course.</p>
+      <p>The proposal of this blog is to post random things and personal interest, to train some techniques of web programming and mainly to stimulate the learning of the English language, therefore they are not as critical as the coherence of a beginner.</p>
     </div>
     </div>
   </div>
