alteração de conteúdo

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="fright col-lg-9">
     <div class="text-center">
       <h2>Hello guys!</h2>
-      <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
+      <h5>Welcome to <strong>(project of)</strong> my personal blog.</h5>
     </div>
     <div class="fright col-lg-10">
       <p>The proposal of this blog is to post random things and personal interest, to train some techniques of web programming and mainly to stimulate the learning of the English language, therefore they are not as critical as the coherence of a beginner.</p>
