--- a/projects.html
+++ b/projects.html
@@ -77,11 +77,10 @@
   </div>
     <div class="fright col-lg-9">
     <div class="text-center">
-      <h2>Hello guys!</h2>
-      <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
+      <h2>Projects</h2>
+      <p>It's <strong>same</strong> ativities.</p>
     </div>
     <div class="fright col-lg-10">
-      <h3>Projects</h3>
       <a href="./post/distributed-systems.html"><h5>#1. Overview of Distributed Systems</h5></a>
       <p>Its purpose is to provide an overview of the activities developed during the course of the course.</p>
     </div>
