--- a/timeline.html
+++ b/timeline.html
@@ -77,8 +77,8 @@
   </div>
     <div class="fright col-lg-9">
     <div class="text-center">
-      <h2>Hello guys!</h2>
-      <p>Welcome to <strong>(project of)</strong> my personal blog.</p>
+      <h2>Timeline</h2>
+      <h5>Just <strong>a few</strong> hobbies.</h5>
     </div>
     <div class="fright col-lg-10">
       <h3>Timeline</h3>
