alteração de conteúdo

--- a/projects.html
+++ b/projects.html
@@ -19,16 +19,13 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Thiego's blog</a>
+  <a class="navbar-brand" href="./index.html">Thiego's blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="./index.html">Home <!--<span class="sr-only">(current)--></span></a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="./timeline.html">Timeline</a>
       </li>
@@ -78,7 +75,7 @@
     <div class="fright col-lg-9">
     <div class="text-center">
       <h2>Projects</h2>
-      <p>It's <strong>same</strong> ativities.</p>
+      <h5>Some <strong>random</strong> activities.</h5>
     </div>
     <div class="fright col-lg-10">
       <a href="./post/distributed-systems.html"><h5>#1. Overview of Distributed Systems</h5></a>
