--- a/timeline.html
+++ b/timeline.html
@@ -19,16 +19,13 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Thiego's blog</a>
+  <a class="navbar-brand" href="./index.html">Thiego's blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="./timeline.html">Timeline</a>
       </li>
@@ -81,7 +78,6 @@
       <h5>Just <strong>a few</strong> hobbies.</h5>
     </div>
     <div class="fright col-lg-10">
-      <h3>Timeline</h3>
       <h5>Building (...)</h5>
       <p>This is a paragrapy</p>
     </div>
