--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Thiego's blog</a>
+  <a class="navbar-brand" href="./index.html">Thiego's blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="./index.html">Home <!--<span class="sr-only">(current)--></span></a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="./timeline.html">Timeline</a>
       </li>
@@ -81,7 +78,7 @@
       <h5>Welcome to <strong>(project of)</strong> my personal blog.</h5>
     </div>
     <div class="fright col-lg-10">
-      <p>The proposal of this blog is to post random things and personal interest, to train some techniques of web programming and mainly to stimulate the learning of the English language, therefore they are not as critical as the coherence of a beginner.</p>
+      <p class="text-center">The proposal of this blog is to post random things and personal interest, to train some techniques of web programming and mainly to stimulate the learning of the English language, therefore they are not as critical as the coherence of a beginner.</p>
     </div>
     </div>
   </div>
