--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="container-fluid">
     <div class="row">
      <div class="pl text-center col-lg-2">
-      <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gig2-1.cdninstagram.com/vp/4e68556be1c4abada11f2f84e720e1ea/5D167B8D/t51.2885-19/s150x150/46237601_200589320890829_3108781054937268224_n.jpg?_nc_ht=scontent-gig2-1.cdninstagram.com">
+      <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gru2-1.cdninstagram.com/vp/5410b3b6b0c4a1efbfa9d8c0c1844e42/5DACAFE8/t51.2885-19/s150x150/61686750_316103089313248_3434111307052220416_n.jpg?_nc_ht=scontent-gru2-1.cdninstagram.com">
       <h4><strong>Thiego</strong> R. Moura</h4>
       <p class="italic">A Brazilian assistant technology.</p>
       <!--<p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
