--- a/portfolio.html
+++ b/portfolio.html
@@ -13,13 +13,12 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="shortcut icon" type="imagem/x-icon" href = "favicon.ico"/>
   <link href="estilo.css" rel="stylesheet">
   <title>Thiego Moura - Personal Blog</title>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="./index.html">Thiego's blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -65,7 +64,6 @@
       <li>
         <a href="http://twitter.com/thrmoura" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
       </li>
-        
     </ul>
   <!--<p class="italic">invete me</i><br>
   <ul class="list-unstyled">
@@ -82,14 +80,19 @@
   </div>
     <div class="fright col-lg-9">
     <div class="text-center">
-      <img src="img/tm-no-bg.png">
-      <br>
-      <br>
-      <h2>Hello guys!</h2>
-      <h5>Welcome to <strong>(project of)</strong> my personal blog.</h5>
+      <h2>&lt;Portfolio/&gt;</h2>
+      <h5>Just <strong>a few</strong> jobs.</h5>
     </div>
     <div class="fright col-lg-10">
-      <p class="text-center">The proposal of this blog is to post random things and personal interest, to train some techniques of web programming and mainly to stimulate the learning of the English language, therefore they are not as critical as the coherence of a beginner.</p>
+      <h5>Websites</h5>
+      <a href="https://thiegomoura.github.io/conarc-2019/" target="_blank"><h5>#1. Conarc da Transformação</h5></a>
+      <p>Its purpose is to provide an overview of the activities developed during the course of the course.</p>
+      <a href="http://www.barralcool.com.br" target="_blank"><h5>#2. Grupo Barralcool</h5></a>
+      <p>Its purpose is to provide an overview of the activities developed during the course of the course.</p>
+    </div>
+    <div class="fright col-lg-10">
+      <h5>Web Design</h5>
+      <p>in building</p>
     </div>
     </div>
   </div>
