--- a/timeline.html
+++ b/timeline.html
@@ -30,6 +30,9 @@
         <a class="nav-link" href="./timeline.html">Timeline</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="./projects.html">Projects</a>
       </li>
     </ul>
@@ -49,6 +52,9 @@
     <p>I'm a trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres.</p>
     <p class="italic">follow me</p>
     <ul class="list-unstyled">
+        <li>
+        <a href="http://github.com/thiegomoura" target="_blank"><i class="fab fa-github"></i> Github</a>
+      </li>
       <li>
         <a href="http://facebook.com.br/thiegomoura" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
       </li>
@@ -74,7 +80,7 @@
   </div>
     <div class="fright col-lg-9">
     <div class="text-center">
-      <h2>Timeline</h2>
+      <h2>&lt;Timeline/&gt;</h2>
       <h5>Just <strong>a few</strong> hobbies.</h5>
     </div>
     <div class="fright col-lg-10">
@@ -90,7 +96,7 @@
 </body>
 <footer>
   <div class="footer text-center">
-    <span>&copy;Copyright 2019 - Thiego R. Moura. Todos os direitos reservados.</span>
+    <span>&copy;Copyright 2019 - TM. Todos os direitos reservados.</span>
   </div>
 </footer>
 <!-- Optional JavaScript -->
