--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,9 @@
         <a class="nav-link" href="./timeline.html">Timeline</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="./projects.html">Projects</a>
       </li>
     </ul>
@@ -49,6 +52,9 @@
     <p>I'm a trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres.</p>
     <p class="italic">follow me</p>
     <ul class="list-unstyled">
+        <li>
+        <a href="http://github.com/thiegomoura" target="_blank"><i class="fab fa-github"></i> Github</a>
+      </li>
       <li>
         <a href="http://facebook.com.br/thiegomoura" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
       </li>
@@ -74,7 +80,7 @@
   </div>
     <div class="fright col-lg-9">
     <div class="text-center">
-      <h2>Projects</h2>
+      <h2>&lt;Projects/&gt;</h2>
       <h5>Some <strong>random</strong> activities.</h5>
     </div>
     <div class="fright col-lg-10">
