alteracao de descricao

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,9 +86,9 @@
     <div class="fright col-lg-10">
       <h5>Websites</h5>
       <a href="https://thiegomoura.github.io/conarc-2019/" target="_blank"><h5>#1. Conarc da Transformação</h5></a>
-      <p></p>
+      <p>Website developed for the event, based in Cuiabá MT.</p>
       <a href="http://www.barralcool.com.br" target="_blank"><h5>#2. Grupo Barralcool</h5></a>
-      <p></p>
+      <p>Website developed for the Barralcool Group, the first change that Internet users will notice is the new design, more flat and modern. Website layout plays an essential role in company strategy. Maintaining responsiveness, adapting to different possible screen formats (desktop and mobile).</p>
     </div>
     <div class="fright col-lg-10">
       <h5>Web Design</h5>
