--- a/portfolio.html
+++ b/portfolio.html
@@ -19,40 +19,40 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="./index.html">Thiego's blog</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" href="./index.html">Thiego's blog</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="./timeline.html">Timeline</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./projects.html">Projects</a>
-      </li>
-    </ul>
-  </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="./timeline.html">Timeline</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./projects.html">Projects</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 
   <div class="container-fluid">
     <div class="row">
-     <div class="pl text-center col-lg-2">
-      <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gru2-1.cdninstagram.com/vp/5410b3b6b0c4a1efbfa9d8c0c1844e42/5DACAFE8/t51.2885-19/s150x150/61686750_316103089313248_3434111307052220416_n.jpg?_nc_ht=scontent-gru2-1.cdninstagram.com">
+     <div class="pl text-center col-lg-3">
+      <img class="rounded-circle mx-auto img-fluid" src="https://scontent-gru1-1.cdninstagram.com/vp/b4596cd7c7ae832745d90de869f0baab/5E4AE3E8/t51.2885-19/s150x150/61686750_316103089313248_3434111307052220416_n.jpg?_nc_ht=scontent-gru1-1.cdninstagram.com">
       <h4><strong>Thiego</strong> R. Moura</h4>
-      <p class="italic">A Brazilian assistant technology.</p>
+      <p class="italic">A Brazilian assistant technology (in building).</p>
       <!--<p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
       • Computer Science Student 💻<br>
       • Since 1997 🚼<br>
-    • From Barra do Bugres 🇧🇷</p>-->
-    <p>I'm a trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres.</p>
+      • From Barra do Bugres 🇧🇷</p>-->
+    <p>I'm a trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres - MT.</p>
     <p class="italic">follow me</p>
     <ul class="list-unstyled">
-        <li>
+      <li>
         <a href="http://github.com/thiegomoura" target="_blank"><i class="fab fa-github"></i> Github</a>
       </li>
       <li>
@@ -61,49 +61,50 @@
       <li>
         <a href="http://www.instagram.com/thiego_moura/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
       </li>
-      <li>
+      <!--<li>
         <a href="http://twitter.com/thrmoura" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
-      </li>
+      </li>-->
+
     </ul>
-  <!--<p class="italic">invete me</i><br>
-  <ul class="list-unstyled">
-    <li>League
-      <a href="https://lolprofile.net/pt/summoner/br/Nem%20sabe%20como#update" target="_blank"><i class="fas fa-gamepad"></i> Nem sabe como</a>
-    </li>
-    <li>Free fire
-      <i class="fas fa-user-ninja"></i> A3Fark</a>
-    </li>
-  </ul>-->
-  <p class="italic">contact me at</p>
-  <a href="mailto:thi-ego@hotmail.com">thi-ego<i class="fas fa-at"></i>hotmail.com</a>
-  <br>
+      <!--<p class="italic">invete me</i><br>
+      <ul class="list-unstyled">
+        <li>League
+          <a href="https://lolprofile.net/pt/summoner/br/Nem%20sabe%20como#update" target="_blank"><i class="fas fa-gamepad"></i> Nem sabe como</a>
+        </li>
+        <li>Free fire
+          <i class="fas fa-user-ninja"></i> A3Fark</a>
+        </li>
+      </ul>-->
+      <p class="italic">contact me at</p>
+      <a href="mailto:thi-ego@hotmail.com">thi-ego<i class="fas fa-at"></i>hotmail.com</a>
+      <br>
+    </div>
+<div class="fright col-lg-9">
+  <div class="section-header text-center">
+    <h3>&lt;Portfolio/&gt;</h3>
+    <p>Just <strong>a few</strong> jobs.</p>
   </div>
-    <div class="fright col-lg-9">
-    <div class="text-center">
-      <h2>&lt;Portfolio/&gt;</h2>
-      <h5>Just <strong>a few</strong> jobs.</h5>
-    </div>
-    <div class="fright col-lg-10">
-      <h5>Websites</h5>
-      <a href="https://thiegomoura.github.io/conarc-2019/" target="_blank"><h5>#1. Conarc da Transformação</h5></a>
-      <p>Website developed for the event, based in Cuiabá MT.</p>
-      <a href="http://www.barralcool.com.br" target="_blank"><h5>#2. Grupo Barralcool</h5></a>
-      <p>Website developed for the Barralcool Group, the first change that Internet users will notice is the new design, more flat and modern. Website layout plays an essential role in company strategy. Maintaining responsiveness, adapting to different possible screen formats (desktop and mobile).</p>
-    </div>
-    <div class="fright col-lg-10">
-      <h5>Web Design</h5>
-      <p>in building</p>
-    </div>
-    </div>
+  <div class="fright col-lg-12">
+    <h5>Websites</h5>
+    <a href="https://thiegomoura.github.io/conarc-2019/" target="_blank"><h5>#1. Conarc da Transformação</h5></a>
+    <p>Website developed for the event, based in Cuiabá MT.</p>
+    <a href="http://www.barralcool.com.br" target="_blank"><h5>#2. Grupo Barralcool</h5></a>
+    <p class="">Website developed for the Barralcool Group, the first change that Internet users will notice is the new design, more flat and modern. Website layout plays an essential role in company strategy. Maintaining responsiveness, adapting to different possible screen formats (desktop and mobile).</p>
   </div>
-  <div class="col-lg-12 text-center fb">
-  <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fthiegomoura.github.io%2Fme%2F&width=72&layout=box_count&action=like&size=large&show_faces=true&share=false&height=65&appId=1259348474214831" width="72" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" colorscheme="dark" allowTransparency="true" allow="encrypted-media"></iframe>
+  <div class="fright col-lg-12">
+    <h5>Wedesign</h5>
+    <p>(in building)</p>
   </div>
+</div>
+</div>
 </div>
 </body>
 <footer>
+  <div class="col-lg-12 text-center">
+    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fgit.io%2FJe0MD&width=72&layout=box_count&action=like&size=large&show_faces=true&share=false&height=65&appId=347980555926770" width="72" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+  </div>
   <div class="footer text-center">
-    <span>&copy;Copyright 2019 - Thiego R. Moura. Todos os direitos reservados.</span>
+    <span>&copy;Copyright 2019 - TM. Todos os direitos reservados.</span>
   </div>
 </footer>
 <!-- Optional JavaScript -->
