alteração do layout

--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
       <a href="mailto:thi-ego@hotmail.com">thi-ego<i class="fas fa-at"></i>hotmail.com</a>
       <br>
     </div>
-<div class="fright col-lg-9">
+<div class="pr col-lg-9">
   <div class="section-header text-center">
     <h3>&lt;Projects/&gt;</h3>
     <p>Some <strong>random</strong> activities.</p>
@@ -93,13 +93,12 @@
 </div>
 </body>
 <footer>
-  <div class="col-lg-12 text-center">
-    <br>Like this <b>(nunca te pedi nada).</b><br>
+  <div class="text-center">
     <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fgit.io%2FJe0MD&width=72&layout=box_count&action=like&size=large&show_faces=true&share=false&height=65&appId=347980555926770" width="72" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
   </div>
-  <div class="footer text-center">
-    <span>&copy;Copyright 2019 - TM. Todos os direitos reservados.</span>
-  </div>
+    <div class="footer text-center">
+      <span>&copy;Copyright 2019 - TM. Todos os direitos reservados.</span>
+    </div>
 </footer>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
