--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       • Computer Science Student 💻<br>
       • Since 1997 🚼<br>
       • From Barra do Bugres 🇧🇷</p>-->
+      <br>
     <p>I'm a trainner, gamer, programador bolado and technology enthusiast in the open hours. Computer Science Student. Since 1997. From Barra do Bugres - MT.</p>
     <p class="italic">follow me</p>
     <ul class="list-unstyled">
@@ -79,7 +80,7 @@
       <a href="mailto:thi-ego@hotmail.com">thi-ego<i class="fas fa-at"></i>hotmail.com</a>
       <br>
     </div>
-  <div class="fright col-lg-9">
+  <div class="pr col-lg-9">
     <div class="text-center">
       <img src="img/tm-no-bg.png">
       <br>
@@ -93,11 +94,10 @@
   </div>
   
   </div>
+  
 </body>
 <footer>
-
-  <div class="col-lg-12 text-center">
-    <br>Like this <b>(nunca te pedi nada).</b><br>
+  <div class="text-center">
     <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fgit.io%2FJe0MD&width=72&layout=box_count&action=like&size=large&show_faces=true&share=false&height=65&appId=347980555926770" width="72" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
   </div>
     <div class="footer text-center">
