--- a/projects.html
+++ b/projects.html
@@ -26,15 +26,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="./timeline.html">Timeline</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./projects.html">Projects</a>
-        </li>
+        <li>
+        <a href="http://github.com/thiegomoura" target="_blank"><i class="fab fa-github"></i> Github</a>
+      
+        <a href="http://facebook.com.br/thiegomoura" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+      
+        <a href="http://www.instagram.com/thiego_moura/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+      </li>
       </ul>
     </div>
   </nav>
@@ -42,7 +40,7 @@
   <div class="container-fluid">
     <div class="row">
      <div class="pl text-center col-lg-3">
-      <img class="rounded-circle mx-auto img-fluid" src="img/thiego.png">
+      <img class="rounded-circle mx-auto img-fluid" id="perfil" src="img/th.png">
       <h4><strong>Thiego</strong> R. Moura</h4>
       <p class="italic">A Brazilian assistant technology (in building).</p>
       <!--<p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
