--- a/timeline.html
+++ b/timeline.html
@@ -42,7 +42,7 @@
   <div class="container-fluid">
     <div class="row">
      <div class="pl text-center col-lg-3">
-      <img class="rounded-circle mx-auto img-fluid" src="img/thiego.png">
+      <img class="rounded-circle mx-auto img-fluid" id="perfil" src="img/th.png">
       <h4><strong>Thiego</strong> R. Moura</h4>
       <p class="italic">A Brazilian assistant technology (in building).</p>
       <!--<p>• A trainner, gamer, programador bolado and technology enthusiast in the open hours 📌<br>
@@ -54,11 +54,9 @@
     <ul class="list-unstyled">
       <li>
         <a href="http://github.com/thiegomoura" target="_blank"><i class="fab fa-github"></i> Github</a>
-      </li>
-      <li>
+      
         <a href="http://facebook.com.br/thiegomoura" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
-      </li>
-      <li>
+      
         <a href="http://www.instagram.com/thiego_moura/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
       </li>
       <!--<li>
