--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
         <p class="italic">follow me</p>
         <div class="profile-social">
           <a href="http://github.com/thiegomoura" target="_blank"><i class="fab fa-github"></i> Github</a>
-          <a href="http://facebook.com.br/thiegomoura" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+          <a href="https://www.linkedin.com/in/thiegomoura/" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a>
           <a href="http://www.instagram.com/thiego_moura/" target="_blank"><i class="fab fa-instagram"></i>
             Instagram</a>
         </div>
