change profile picture

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <main>
     <div id="profile">
       <img class="profile-image"
-        src="https://avatars3.githubusercontent.com/u/18420762?s=460&u=5fa3d3209f953669f08287c2cd5d5c6f0e597a61&v=4">
+        src="./img/th.jpg">
       <h5><strong>Thiego</strong> R. Moura</h5>
       <p>A Brazilian IT analyst (under construction).</p>
       <ul>
