--- a/portfolio.html
+++ b/portfolio.html
@@ -56,11 +56,11 @@
                 Maintaining responsiveness, adapting to different possible screen formats (desktop and mobile).</p>
             </a>
           </li>
-          <li><a href="post/jonas-website/index.html" target="_blank">
+          <!-- <li><a href="post/jonas-website/index.html" target="_blank">
               <h5>Website Dr. Jonas</h5>
               <p class="">Website developed for Dr. Jonas</p>
             </a>
-          </li>
+          </li> -->
         </ul>
         <h4>Wedesign</h4>
         <p>(under construction)</p>
