--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     </li>
                 </ul>
             </div>
-            <a class="p-2">
-                <i class="bi bi-brightness-high-fill" onclick="toggleTheme()"></i>
+            <a id="theme" class="p-2">
+                <i class="bi" onclick="toggleTheme()"></i>
             </a>
             <a class="btn-secondary rounded p-2" href="./docs/cv.pdf" download="thiego-moura-curriculo">
                 <span>Download CV</span>
